Removed extra characters

--- a/index.jade
+++ b/index.jade
@@ -54,7 +54,7 @@ html(lang="en")
               a(href="http://vitez.me/games")
                 img.img-circle.icon(src="http://vitez.me/images/games.png")
             h3.text-center Games
-            p | Most of my games are absurd little affairs pretending to be what they are not, and made with Unity. I would recommend 
+            p Most of my games are absurd little affairs pretending to be what they are not, and made with Unity. I would recommend 
               a(href="http://vitez.me/games/disasteroids/") Disasteroids
               | , a virtual reality hackathon-winning survival game about asteroid mining. Or maybe 
               a(href="http://vitez.me/games/artfuldodger/") Artful Dodger
@@ -65,14 +65,14 @@ html(lang="en")
               a(href="http://vitez.me/blog")
                 img.img-circle.icon(src="http://vitez.me/images/blog.png")
             hg.text-center Blog
-            p | I am admittedly not the most active writer. But I try to keep what I do write entertaining. So my blog is full of short little pieces on anything you could imagine&mdash;from goats to algebra. Where could such a place be? You guessed it: 
+            p I am admittedly not the most active writer. But I try to keep what I do write entertaining. So my blog is full of short little pieces on anything you could imagine&mdash;from goats to algebra. Where could such a place be? You guessed it: 
               a(href="http://vitez.me/blog") vitez.me/blog
           .col-md-4.col-md-4.col-md-4
             .text-center
               a(href="http://vitez.me/resume")
                 img.img-circle.icon(src="img/resume.png")
               h3.text-center Resume
-              p | Want to build a typographically decent resume for the web really quickly? Try out 
+              p Want to build a typographically decent resume for the web really quickly? Try out 
                 a(href="https://github.com/mitchellvitez/resume") typographic.css
                 | , a resume-focused style. To view my own personal web resume, cruise on over to 
                 a(href="http://vitez.me/resume") vitez.me/resume
