--- a/index.jade
+++ b/index.jade
@@ -64,7 +64,7 @@ html(lang="en")
             .text-center
               a(href="http://vitez.me/blog")
                 img.img-circle.icon(src="http://vitez.me/images/blog.png")
-            hg.text-center Blog
+            h3.text-center Blog
             p I am admittedly not the most active writer. But I try to keep what I do write entertaining. So my blog is full of short little pieces on anything you could imagine&mdash;from goats to algebra. Where could such a place be? You guessed it: 
               a(href="http://vitez.me/blog") vitez.me/blog
           .col-md-4.col-md-4.col-md-4
